# pentos

./: .gitignore  .gitmodules  README.md  TODO.md  docker-compose.moonraker.yml  pyproject.toml
docs/: sim-klipper-moonraker.md
hardware/: README.md
klipper_config/: README.md  moonraker-sim.conf  printer.cfg  sim-printer.cfg
klipper_configs/: ender3v2.cfg
printer_data/: .moonraker.uuid
sim/: .gitignore  Dockerfile  README.md  docker-compose.klipper.yml  docker-compose.yml  pyproject.toml
sim/docs/: sim-klipper-moonraker.md
sim/pentos/: CMakeLists.txt  package.xml
sim/pentos/launch/: pentos.launch  sim.launch.py
sim/pentos/meshes/: A Axis.gltf  B Axis.gltf  Frame.gltf  X Carriage.gltf
sim/pentos/pentos_klipper_bridge/: __init__.py  klipper_gazebo_bridge.py  klipper_status.py
sim/pentos/urdf/: pentos.urdf
sim/printer_data/config/: moonraker.conf  printer.cfg
sim/ros/pentos/config/: pentos_controllers.yaml
sim/ros/pentos/meshes/: X Gantry.gltf  Y Gantry.gltf
sim/ros/pentos/pentos_klipper_bridge/: klipper_status.py
sim/ros/pentos/scripts/: klipper_gazebo_bridge
sim/ros/scripts/: source_pentos.bash
sim/scripts/: build_pentos.sh  launch_gz_empty.sh  run_pentos_sim.sh  source_pentos.bash
